Scroll event prevented and z-index setting

--- a/jLogger/jLogger.css
+++ b/jLogger/jLogger.css
@@ -3,7 +3,7 @@ body {
 }
 .log-window {
     background: rgba(0, 0, 0, 0.85);
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     right: 0;
